--- a/index.html
+++ b/index.html
@@ -1,27 +1,56 @@
 <!doctype html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>seonmi_portfolio_2026</title>
+    <script
+      src="https://kit.fontawesome.com/f01502651a.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Google Fonts : Montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Pretendard -->
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@latest/dist/web/static/pretendard.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>seonmi_portfolio_2026</title>
-  <!-- Google Fonts : Montserrat -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <!-- Pretendard -->
-  <link rel="stylesheet" as="style" crossorigin
-    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@latest/dist/web/static/pretendard.css" />
-</head>
-
-<body>
-  <div class="wrap">
-    <header>
-      <h1 id="logo">
-        <a href="#"><img src="./src/img/main/logoW.svg" alt="" /></a>
-      </h1>
-      <nav class="main_nav">
+  <body>
+    <div class="wrap">
+      <header>
+        <div class="headerbox">
+          <h1 id="logo">
+            <a href="#"><img src="./src/img/main/logoW.svg" alt="" /></a>
+          </h1>
+          <nav class="main_nav">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Work</a></li>
+              <li><a href="#">Process</a></li>
+            </ul>
+          </nav>
+          <div class="navHamburg">
+            <div class="navHamburg_box">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- 전체 화면 메뉴 -->
+      <nav class="nav nav--full">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -29,74 +58,123 @@
           <li><a href="#">Process</a></li>
         </ul>
       </nav>
-      <div class="navHamburg">
-        <div class="navHamburg_box">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-      </div>
-    </header>
-    <!-- 전체 화면 메뉴 -->
-    <nav class="nav nav--full">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Process</a></li>
-      </ul>
-    </nav>
 
-    <section class="main">
-      <div class="main_textBox">
-        <p>U<span class="pointColor">I</span> / U<span class="pointColor">X</span><br /><span
-            class="pointColor">P</span>ublisher</p>
-        <p>
-          <span class="pointColor">D</span>esign <br />
-          <span class="pointColor">D</span>evelopment
-        </p>
-        <p><span class="pointColor">F</span>ront-<span class="pointColor">E</span>nd</p>
-      </div>
-      <div class="main_imgBox">
-        <div class="circle"></div>
-        <div class="character"></div>
-      </div>
-    </section>
-    <section class="about">
-      <div class="aboutcontent">
-        <div class="about_textBox">
-          <p>I am SeonMi Sim,<br/> a web publisher who adapts quickly to change and embraces new challenges.</p>
+      <section class="main">
+        <div class="main_textBox">
+          <p>
+            U<span class="point">I</span> / U<span class="point">X</span
+            ><br /><span class="point">P</span>ublisher
+          </p>
+          <p>
+            <span class="point">D</span>esign <br />
+            <span class="point">D</span>evelopment
+          </p>
+          <p><span class="point">F</span>ront-<span class="point">E</span>nd</p>
         </div>
-        <div class="about_imgBox"></div>
-        <div class="about_favorite">
-          <div class="favoriteText">
+        <div class="main_imgBox">
+          <div class="circle"></div>
+          <div class="character"></div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="aboutcontent">
+          <div class="about_textBox">
+            <p>
+              I am <span class="point">SeonMi Sim</span>,<br />
+              a web publisher who adapts quickly to
+              <span class="point">change</span> and embraces new
+              <span class="point">challenges</span>.
+            </p>
+          </div>
+          <div class="about_imgBox"></div>
+          <div class="about_favorite">
+            <div class="favoriteBox">
+              <div class="favoriteText">
+                <ul>
+                  <li><span>What</span></li>
+                  <li><span>is My</span></li>
+                  <li><span>Favorite</span></li>
+                  <li><span>Item?</span></li>
+                </ul>
+              </div>
+              <div class="favoriteItem">
+                <div class="favoriteItem_l">
+                  <span class="a item" id="l_1"
+                    ><img src="/src/img/main/about/music_08.png" alt=""
+                  /></span>
+                  <span class="c item" id="l_2"
+                    ><img src="/src/img/main/about/Health_03.png" alt=""
+                  /></span>
+                  <span class="b item" id="l_3"
+                    ><img src="/src/img/main/about/Interior_04.png" alt=""
+                  /></span>
+                  <span class="a item" id="l_4"
+                    ><img src="/src/img/main/about/plants_02.png" alt=""
+                  /></span>
+                  <span class="c item" id="l_5"
+                    ><img src="/src/img/main/about/Shopping_10.png" alt=""
+                  /></span>
+                </div>
+                <div class="favoriteItem_r">
+                  <span class="b item" id="r_1"
+                    ><img src="/src/img/main/about/Camera_05.png" alt=""
+                  /></span>
+                  <span class="c item" id="r_2"
+                    ><img src="/src/img/main/about/coding_06_w.png" alt=""
+                  /></span>
+                  <span class="b item" id="r_3"
+                    ><img src="/src/img/main/about/cook_07.png" alt=""
+                  /></span>
+                  <span class="a item" id="r_4"
+                    ><img src="/src/img/main/about/pet_09.png" alt=""
+                  /></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <div class="abouttext">
+          <h3>about me?</h3>
+          <i class="fa-solid fa-angles-down fa-2x"></i>
+        </div>
+        <div class="videoWrap">
+          <div class="videoBox">
+            <video
+              src="./src/img/main/video.mov"
+              autoplay=""
+              muted=""
+              loop=""
+              playinline=""
+              type="video/mp4"
+            ></video>
+          </div>
+        </div>
+      </section>
+      <section class="skill">
+        <div class="skillbox">
+          <div class="skill_text">
+            <h2 class="skill_text__title">skill</h2>
+            <p>
+              Photoshop, Illustrator, Figma를 활용한 디자인 작업은 물론, HTML,
+              CSS, JavaScript, SCSS, Vite, GitHub를 사용해 실제 구현까지
+              완성합니다.
+            </p>
+          </div>
+          <div class="skill_img">
             <ul>
-              <li><span>What</span></li>
-              <li><span>is My</span></li>
-              <li><span>Favorite</span></li>
-              <li><span>Item?</span></li>
+              <li></li>
             </ul>
           </div>
-          <div class="favorItem">
-            <span class="a item"><img src="/src/img/main/about/favorite01.png" alt=""></span>
-            <span class="c item"><img src="/src/img/main/about/favorite03.png" alt=""></span>
-            <span class="b item"><img src="/src/img/main/about/favorite04.png" alt=""></span>
-            <span class="b item"><img src="/src/img/main/about/favorite05.png" alt=""></span>
-            <span class="c item"><img src="/src/img/main/about/favorite06_w.png" alt=""></span>
-            <span class="b item"><img src="/src/img/main/about/favorite07.png" alt=""></span>
-            <span class="a item"><img src="/src/img/main/about/favorite08.png" alt=""></span>
-            <span class="a item"><img src="/src/img/main/about/favorite09.png" alt=""></span>
-            <span class="c item"><img src="/src/img/main/about/favorite10.png" alt=""></span>
-          </div>
         </div>
-      </div>
-    </section>
-  </div>
-<!-- script plugin -->
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
-<!-- script -->
-  <script type="module" src="/src/js/main.js"></script>
-</body>
+      </section>
+    </div>
+    <!-- script plugin -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
 
+    <!-- script -->
+    <script type="module" src="/src/js/main.js"></script>
+  </body>
 </html>
