--- a/index.html
+++ b/index.html
@@ -135,10 +135,13 @@
         </div>
       </section>
       <section class="video">
-        <div class="abouttext">
-          <h3>about me?</h3>
-          <i class="fa-solid fa-angles-down fa-2x"></i>
-        </div>
+        <div class="about_circlebox">
+          <div class="aboutcircle"></div>
+          <div class="abouttext">
+            <h3>about me?</h3>
+            <i class="fa-solid fa-angles-down fa-2x"></i>
+          </div>
+          </div>
         <div class="videoWrap">
           <div class="videoBox">
             <video
@@ -164,7 +167,7 @@
           </div>
           <div class="skill_img">
             <ul>
-              <li></li>
+              <li><img src="./src/img/main/skill/scss_w.png" alt=""></li>
             </ul>
           </div>
         </div>
