--- a/index.html
+++ b/index.html
@@ -28,23 +28,25 @@
   <body>
     <div class="wrap">
       <header>
-        <div class="headerbox">
-          <h1 id="logo">
-            <a href="#"><img src="./src/img/main/logoW.svg" alt="" /></a>
-          </h1>
-          <nav class="main_nav">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Work</a></li>
-              <li><a href="#">Process</a></li>
-            </ul>
-          </nav>
-          <div class="navHamburg">
-            <div class="navHamburg_box">
-              <span></span>
-              <span></span>
-              <span></span>
+        <div class="container-90">
+          <div class="headerbox">
+            <h1 id="logo">
+              <a href="#"><img src="./src/img/main/logoW.svg" alt="" /></a>
+            </h1>
+            <nav class="main_nav">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Process</a></li>
+              </ul>
+            </nav>
+            <div class="navHamburg">
+              <div class="navHamburg_box">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
             </div>
           </div>
         </div>
@@ -141,7 +143,7 @@
             <h3>about me?</h3>
             <i class="fa-solid fa-angles-down fa-2x"></i>
           </div>
-          </div>
+        </div>
         <div class="videoWrap">
           <div class="videoBox">
             <video
@@ -158,7 +160,7 @@
       <section class="skill">
         <div class="skillbox">
           <div class="skill_text">
-            <h2 class="skill_text__title">skill</h2>
+            <h2 class="skill_text__title">Software Skills</h2>
             <p>
               Photoshop, Illustrator, Figma를 활용한 디자인 작업은 물론, HTML,
               CSS, JavaScript, SCSS, Vite, GitHub를 사용해 실제 구현까지
@@ -167,7 +169,7 @@
           </div>
           <div class="skill_img">
             <ul>
-              <li><img src="./src/img/main/skill/scss_w.png" alt=""></li>
+              <li><img src="./src/img/main/skill/scss.png" alt="" /></li>
             </ul>
           </div>
         </div>
